# emclib

./: .codeclimate.yml  .filelist  .travis.yml  Makefile.am  Makefile.in  README.md  bootstrap  cleanup  color.c  color.h  config.h.in  configure  configure.ac  filelist
base64/: base64.c
colorprint/: color.c  color.h
common/: logging.c  logging_cfg.c
include/: color.h  emstr.h  logging.h  split.h
string/: join.c  split.c
test/: codecov.py  test  test_join.c  test_splitstr.c
tests/: Makefile.am  Makefile.in  check_colorprint.c  check_join.c  check_split.c  codecov.py  testsuite.h  unittest.c
tests/test/: test_colorprint.c  test_join.c
